# weaviate-recipes

weaviate-features/boost/: .gitignore  README.md  docker-compose.yml  import_amazon_products.py  pyproject.toml  query_with_rank.py  results.txt  search_app.py
weaviate-features/ttl/: time-to-live.ipynb
